fix: fix x-scroll on mobile

--- a/image-galery/style.css
+++ b/image-galery/style.css
@@ -3,6 +3,10 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .header {
     border-bottom: 5px solid orange;
 }
@@ -143,6 +147,12 @@ button:before {
 .photo:hover {
     transform: scale(1.1);
     transition: 0.3s;
+}
+
+@media (max-width: 440px) {
+    .photo:hover {
+        transform: none;
+    }
 }
 
 .modal-div {
